# review-sense

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
src/: database.py  main.py
src/api/: endpoints.py
src/config/: settings.py
src/models/: models.py
src/services/: gemini.py  scraper.py  translator.py
