[project]
name = "review-sense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.138.0",
    "google-genai>=2.9.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[tool.ruff]
target-version = "py310"
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

ignore = []

[tool.ruff.format]
quote-style = "double"
